--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_AmbrosiaTag_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_AmbrosiaTag_Generated_Consumer.g.ts.cmp
@@ -4,110 +4,180 @@
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
 import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
+import Utils = Ambrosia.Utils;
 
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
 export namespace Test
 {
-    export async function OneLineNoCommentAsync(): Promise<void>
+    /** Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). */
+    export function OneLineNoComment_PostFork(callContextData: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "OneLineNoComment", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "OneLineNoComment", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
-    export function OneLineNoComment(resultHandler: IC.PostResultHandler<void>): void
+    /** Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). */
+    export function OneLineNoComment_PostImpulse(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "OneLineNoComment", 1, resultHandler, POST_TIMEOUT_IN_MS);
-    }
-
-    /** Multi Line with Comment before Tag
-     * but still before tag
-     */
-    export async function MultiLineCommentBeforeTagAsync(): Promise<void>
-    {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "MultiLineCommentBeforeTag", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "OneLineNoComment", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /** Multi Line with Comment before Tag
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * but still before tag
      */
-    export function MultiLineCommentBeforeTag(resultHandler: IC.PostResultHandler<void>): void
+    export function MultiLineCommentBeforeTag_PostFork(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "MultiLineCommentBeforeTag", 1, resultHandler, POST_TIMEOUT_IN_MS);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "MultiLineCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
-    export async function MultiSeparateLinesCommentBeforeTagAsync(): Promise<void>
+    /** Multi Line with Comment before Tag
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+     * but still before tag
+     */
+    export function MultiLineCommentBeforeTag_PostImpulse(callContextData: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "MultiSeparateLinesCommentBeforeTag", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "MultiLineCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
-    export function MultiSeparateLinesCommentBeforeTag(resultHandler: IC.PostResultHandler<void>): void
+    /** Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). */
+    export function MultiSeparateLinesCommentBeforeTag_PostFork(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "MultiSeparateLinesCommentBeforeTag", 1, resultHandler, POST_TIMEOUT_IN_MS);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "MultiSeparateLinesCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
+    }
+
+    /** Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). */
+    export function MultiSeparateLinesCommentBeforeTag_PostImpulse(callContextData: any): void
+    {
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "MultiSeparateLinesCommentBeforeTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /************** Have a space after the tag before function declaration
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      */
-    export async function EmptyLineBetweenTagAndFctnAsync(): Promise<void>
+    export function EmptyLineBetweenTagAndFctn_PostFork(callContextData: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "EmptyLineBetweenTagAndFctn", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "EmptyLineBetweenTagAndFctn", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /************** Have a space after the tag before function declaration
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      */
-    export function EmptyLineBetweenTagAndFctn(resultHandler: IC.PostResultHandler<void>): void
+    export function EmptyLineBetweenTagAndFctn_PostImpulse(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "EmptyLineBetweenTagAndFctn", 1, resultHandler, POST_TIMEOUT_IN_MS);
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "EmptyLineBetweenTagAndFctn", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /****** Spacing around the tag
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      */
-    export async function SpacingAroundTagAsync(): Promise<void>
+    export function SpacingAroundTag_PostFork(callContextData: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "SpacingAroundTag", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "SpacingAroundTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /****** Spacing around the tag
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      */
-    export function SpacingAroundTag(resultHandler: IC.PostResultHandler<void>): void
+    export function SpacingAroundTag_PostImpulse(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "SpacingAroundTag", 1, resultHandler, POST_TIMEOUT_IN_MS);
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "SpacingAroundTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /** JS Doc
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      */
-    export async function JSDOcTagAsync(): Promise<void>
+    export function JSDOcTag_PostFork(callContextData: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "JSDOcTag", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "JSDOcTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /** JS Doc
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      */
-    export function JSDOcTag(resultHandler: IC.PostResultHandler<void>): void
+    export function JSDOcTag_PostImpulse(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "JSDOcTag", 1, resultHandler, POST_TIMEOUT_IN_MS);
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "JSDOcTag", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /**
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * The ambrosia tag must be on the implementation of an overloaded function
      */
-    export async function fnOverloadAsync(name?: string): Promise<void>
+    export function fnOverload_PostFork(callContextData: any, name?: string): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "fnOverload", 1, null, POST_TIMEOUT_IN_MS, IC.arg("name?", name));
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "fnOverload", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("name?", name));
     }
 
     /**
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * The ambrosia tag must be on the implementation of an overloaded function
      */
-    export function fnOverload(resultHandler: IC.PostResultHandler<void>, name?: string): void
+    export function fnOverload_PostImpulse(callContextData: any, name?: string): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "fnOverload", 1, resultHandler, POST_TIMEOUT_IN_MS, IC.arg("name?", name));
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "fnOverload", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("name?", name));
     }
+}
+
+/** Handler for the results of previously called post methods (in Ambrosia, only 'post' methods return values). See Messages.PostResultDispatcher. */
+export function postResultDispatcher(senderInstanceName: string, methodName: string, methodVersion: number, callID: number, callContextData: any, result: any, errorMsg: string): boolean
+{
+    const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
+    let handled: boolean = true;
+
+    if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
+    {
+        return (false); // Not handled (this post result is from a different instance)
+    }
+
+    if (errorMsg)
+    {
+        Utils.log(`Post method '${methodName}' from ${sender} IC failed (reason: ${errorMsg})`);
+    }
+    else
+    {
+        switch (methodName)
+        {
+            case "OneLineNoComment":
+                const OneLineNoComment_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "MultiLineCommentBeforeTag":
+                const MultiLineCommentBeforeTag_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "MultiSeparateLinesCommentBeforeTag":
+                const MultiSeparateLinesCommentBeforeTag_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "EmptyLineBetweenTagAndFctn":
+                const EmptyLineBetweenTagAndFctn_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "SpacingAroundTag":
+                const SpacingAroundTag_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "JSDOcTag":
+                const JSDOcTag_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "fnOverload":
+                const fnOverload_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            default:
+                handled = false;
+                break;
+        }
+    }
+    return (handled);
 }
