--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_Generated_Consumer.g.ts.cmp
@@ -4,17 +4,51 @@
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
 import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
+import Utils = Ambrosia.Utils;
 
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
-export async function unusedAsync(): Promise<void>
+/** Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). */
+export function unused_PostFork(callContextData: any): void
 {
-    let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "unused", 1, null, POST_TIMEOUT_IN_MS);
-    return (postResult);
+    IC.postFork(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
 }
 
-export function unused(resultHandler: IC.PostResultHandler<void>): void
+/** Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). */
+export function unused_PostImpulse(callContextData: any): void
 {
-    IC.post(DESTINATION_INSTANCE_NAME, "unused", 1, resultHandler, POST_TIMEOUT_IN_MS);
+    IC.postImpulse(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
+}
+
+/** Handler for the results of previously called post methods (in Ambrosia, only 'post' methods return values). See Messages.PostResultDispatcher. */
+export function postResultDispatcher(senderInstanceName: string, methodName: string, methodVersion: number, callID: number, callContextData: any, result: any, errorMsg: string): boolean
+{
+    const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
+    let handled: boolean = true;
+
+    if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
+    {
+        return (false); // Not handled (this post result is from a different instance)
+    }
+
+    if (errorMsg)
+    {
+        Utils.log(`Post method '${methodName}' from ${sender} IC failed (reason: ${errorMsg})`);
+    }
+    else
+    {
+        switch (methodName)
+        {
+            case "unused":
+                const unused_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            default:
+                handled = false;
+                break;
+        }
+    }
+    return (handled);
 }
