--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_Generated_Consumer.g.ts.cmp
@@ -4,6 +4,7 @@
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
 import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
+import Utils = Ambrosia.Utils;
 
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
@@ -67,22 +68,21 @@ export namespace Test
     }
 
     /************* Primitives - bool, string, number, array */
-    export async function BasicTypesAsync(isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): Promise<void>
+    export function BasicTypes_PostFork(callContextData: any, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, null, POST_TIMEOUT_IN_MS, 
+        IC.postFork(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("isFalse", isFalse), 
             IC.arg("height", height), 
             IC.arg("mystring?", mystring), 
             IC.arg("mystring2?", mystring2), 
             IC.arg("my_array?", my_array), 
             IC.arg("notSure?", notSure));
-        return (postResult);
     }
 
     /************* Primitives - bool, string, number, array */
-    export function BasicTypes(resultHandler: IC.PostResultHandler<void>, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): void
+    export function BasicTypes_PostImpulse(callContextData: any, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, resultHandler, POST_TIMEOUT_IN_MS, 
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("isFalse", isFalse), 
             IC.arg("height", height), 
             IC.arg("mystring?", mystring), 
@@ -92,92 +92,150 @@ export namespace Test
     }
 
     /********* Function using / returning Numeric Enum */
-    export async function getMediaAsync(mediaName: string): Promise<PrintMedia>
+    export function getMedia_PostFork(callContextData: any, mediaName: string): void
     {
-        let postResult: PrintMedia = await IC.postAsync(DESTINATION_INSTANCE_NAME, "getMedia", 1, null, POST_TIMEOUT_IN_MS, IC.arg("mediaName", mediaName));
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "getMedia", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("mediaName", mediaName));
     }
 
     /********* Function using / returning Numeric Enum */
-    export function getMedia(resultHandler: IC.PostResultHandler<PrintMedia>, mediaName: string): void
+    export function getMedia_PostImpulse(callContextData: any, mediaName: string): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "getMedia", 1, resultHandler, POST_TIMEOUT_IN_MS, IC.arg("mediaName", mediaName));
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "getMedia", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("mediaName", mediaName));
     }
 
     /************* Void type */
-    export async function warnUserAsync(): Promise<void>
+    export function warnUser_PostFork(callContextData: any): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "warnUser", 1, null, POST_TIMEOUT_IN_MS);
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "warnUser", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /************* Void type */
-    export function warnUser(resultHandler: IC.PostResultHandler<void>): void
+    export function warnUser_PostImpulse(callContextData: any): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "warnUser", 1, resultHandler, POST_TIMEOUT_IN_MS);
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "warnUser", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
     /************** Example of a [post] method that uses custom types. */
-    export async function makeNameAsync(firstName?: string, lastName?: string): Promise<Names>
+    export function makeName_PostFork(callContextData: any, firstName?: string, lastName?: string): void
     {
-        let postResult: Names = await IC.postAsync(DESTINATION_INSTANCE_NAME, "makeName", 1, null, POST_TIMEOUT_IN_MS, 
+        IC.postFork(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("firstName?", firstName), 
             IC.arg("lastName?", lastName));
-        return (postResult);
     }
 
     /************** Example of a [post] method that uses custom types. */
-    export function makeName(resultHandler: IC.PostResultHandler<Names>, firstName?: string, lastName?: string): void
+    export function makeName_PostImpulse(callContextData: any, firstName?: string, lastName?: string): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "makeName", 1, resultHandler, POST_TIMEOUT_IN_MS, 
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("firstName?", firstName), 
             IC.arg("lastName?", lastName));
     }
 
     /********* Function returning number */
-    export async function return_numberAsync(strvalue: string): Promise<number>
+    export function return_number_PostFork(callContextData: any, strvalue: string): void
     {
-        let postResult: number = await IC.postAsync(DESTINATION_INSTANCE_NAME, "return_number", 1, null, POST_TIMEOUT_IN_MS, IC.arg("strvalue", strvalue));
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "return_number", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("strvalue", strvalue));
     }
 
     /********* Function returning number */
-    export function return_number(resultHandler: IC.PostResultHandler<number>, strvalue: string): void
+    export function return_number_PostImpulse(callContextData: any, strvalue: string): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "return_number", 1, resultHandler, POST_TIMEOUT_IN_MS, IC.arg("strvalue", strvalue));
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "return_number", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("strvalue", strvalue));
     }
 
     /********* Function returning string */
-    export async function returnstringAsync(numvalue: number): Promise<string>
+    export function returnstring_PostFork(callContextData: any, numvalue: number): void
     {
-        let postResult: string = await IC.postAsync(DESTINATION_INSTANCE_NAME, "returnstring", 1, null, POST_TIMEOUT_IN_MS, IC.arg("numvalue", numvalue));
-        return (postResult);
+        IC.postFork(DESTINATION_INSTANCE_NAME, "returnstring", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("numvalue", numvalue));
     }
 
     /********* Function returning string */
-    export function returnstring(resultHandler: IC.PostResultHandler<string>, numvalue: number): void
+    export function returnstring_PostImpulse(callContextData: any, numvalue: number): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "returnstring", 1, resultHandler, POST_TIMEOUT_IN_MS, IC.arg("numvalue", numvalue));
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "returnstring", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("numvalue", numvalue));
     }
 
     /********* Function with missing types ****
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * Function with missing type information
      */
-    export async function fnWithMissingTypeAsync(p1: any, p2: number): Promise<void>
+    export function fnWithMissingType_PostFork(callContextData: any, p1: any, p2: number): void
     {
-        let postResult: void = await IC.postAsync(DESTINATION_INSTANCE_NAME, "fnWithMissingType", 1, null, POST_TIMEOUT_IN_MS, 
+        IC.postFork(DESTINATION_INSTANCE_NAME, "fnWithMissingType", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("p1", p1), 
             IC.arg("p2", p2));
-        return (postResult);
     }
 
     /********* Function with missing types ****
+     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * Function with missing type information
      */
-    export function fnWithMissingType(resultHandler: IC.PostResultHandler<void>, p1: any, p2: number): void
+    export function fnWithMissingType_PostImpulse(callContextData: any, p1: any, p2: number): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "fnWithMissingType", 1, resultHandler, POST_TIMEOUT_IN_MS, 
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "fnWithMissingType", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("p1", p1), 
             IC.arg("p2", p2));
     }
+}
+
+/** Handler for the results of previously called post methods (in Ambrosia, only 'post' methods return values). See Messages.PostResultDispatcher. */
+export function postResultDispatcher(senderInstanceName: string, methodName: string, methodVersion: number, callID: number, callContextData: any, result: any, errorMsg: string): boolean
+{
+    const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
+    let handled: boolean = true;
+
+    if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
+    {
+        return (false); // Not handled (this post result is from a different instance)
+    }
+
+    if (errorMsg)
+    {
+        Utils.log(`Post method '${methodName}' from ${sender} IC failed (reason: ${errorMsg})`);
+    }
+    else
+    {
+        switch (methodName)
+        {
+            case "BasicTypes":
+                const BasicTypes_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "getMedia":
+                const getMedia_Result: PrintMedia = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "warnUser":
+                const warnUser_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "makeName":
+                const makeName_Result: Names = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "return_number":
+                const return_number_Result: number = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "returnstring":
+                const returnstring_Result: string = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            case "fnWithMissingType":
+                const fnWithMissingType_Result: void = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            default:
+                handled = false;
+                break;
+        }
+    }
+    return (handled);
 }
