--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_Generated_Publisher.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_Generated_Publisher.g.ts.cmp
@@ -30,66 +30,61 @@ export function checkpointProducer(): Streams.OutgoingCheckpoint
     {
         Utils.log(`checkpointProducer: ${error ? `Failed (reason: ${error.message})` : "Checkpoint saved"}`)
     }
-    return (Streams.simpleCheckpointProducer(Utils.jsonStringify(_appState), onCheckpointSent));
+    return (Streams.simpleCheckpointProducer(_appState, onCheckpointSent));
 }
 
 /** Returns an IncomingCheckpoint object used to receive a checkpoint of app state. */
 export function checkpointConsumer(): Streams.IncomingCheckpoint
 {
-    function onCheckpointReceived(jsonAppState: string, error?: Error): void
+    function onCheckpointReceived(appState: Ambrosia.AmbrosiaAppState, error?: Error): void
     {
         if (!error)
         {
-            _appState = Utils.jsonParse(jsonAppState);
+            _appState = appState as any;
         }
         Utils.log(`checkpointConsumer: ${error ? `Failed (reason: ${error.message})` : "Checkpoint loaded"}`);
     }
     return (Streams.simpleCheckpointConsumer(onCheckpointReceived));
 }
 
-/** This method responds to incoming Ambrosia messages (mainly RPCs, but also the InitialMessage and AppEvents). */
+/** This method responds to incoming Ambrosia messages (RPCs and AppEvents). */
 export function messageDispatcher(message: Messages.DispatchedMessage): void
 {
-    // Fast (non-async) handler for high-volume messages
-    if (!dispatcher(message))
-    {
-        // Slower async handler, but simpler/cleaner to code because we can use 'await'
-        // Note: messageDispatcher() is NOT awaited by the calling code, so we don't await dispatcherAsync(). Consequently, any await's in 
-        //       dispatcherAsync() will start independent Promise chains, and these chains are explicitly responsible for managing any 
-        //       order-of-execution synchronization issues (eg. if the handling of message n is dependent on the handling of message n - 1).
-        dispatcherAsync(message);
-    }
+    // WARNING! Rules for Message Handling:
+    //
+    // Rule 1: Messages must be handled - to completion - in the order received. For application (RPC) messages only, if there are messages that are known to
+    //         be commutative then this rule can be relaxed – but only for RPC messages. 
+    // Reason: Using Ambrosia requires applications to have deterministic execution. Further, system messages (like TakeCheckpoint) from the IC rely on being 
+    //         handled in the order they are sent to the app. This means being extremely careful about using non-synchronous code (like awaitable operations
+    //         or callbacks) inside message handlers: the safest path is to always only use synchronous code.
+    //         
+    // Rule 2: Before a TakeCheckpoint message can be handled, all handlers for previously received messages must have completed (ie. finished executing).
+    //         If Rule #1 is followed, the app is automatically in compliance with Rule #2.
+    // Reason: Unless your application has a way to capture (and rehydrate) runtime execution state (specifically the message handler stack) in the serialized
+    //         application state (checkpoint), recovery of the checkpoint will not be able to complete the in-flight message handlers. But if there are no 
+    //         in-flight handlers at the time the checkpoint is taken (because they all complete), then the problem of how to complete them during recovery is moot. 
+    //
+    // Rule 3: Avoid sending too many messages in a single message handler.
+    // Reason: Because a message handler always has to run to completion (see Rule #1), if it runs for too long it can monopolize the system leading to performance issues.
+    //         Further, this becomes a very costly message to have to replay during recovery. So instead, when an message handler needs to send a large sequence (series)
+    //         of independent messages, it should be designed to be restartable so that the sequence can pick up where it left off (rather than starting over) when resuming
+    //         execution (ie. after loading a checkpoint that occurred during the long-running – but incomplete – sequence). To avoid a single message handler having to send
+    //         the entire sequence, large sequences should be sent in smaller batches using either explicit batches (IC.enqueueFork + IC.flushQueue) or implicit batches 
+    //         (IC.callFork / IC.post) inside a setImmediate() callback. This asynchrony is necessary to allow I/O with the IC to interleave, and is one of the few allowable 
+    //         exceptions to the "always only use asynchronous code" dictate in Rule #1. Restartability is achieved by sending a 'sequence continuation' message at the end of
+    //         each batch, which describes the remaining work to be done. Because the handler for the 'sequence continuation' message only ever sends the next batch plus the
+    //         'sequence continuation' message, it can run to completion quickly, which both keeps the system responsive (by allowing interleaving I/O) while also complying 
+    //         with Rule #1. Interleaving I/O allows the instance to service self-calls, and allows checkpoints to be taken between batches.
+    
+    dispatcher(message);
 }
 
-/** Synchronous message dispatcher. */
-function dispatcher(message: Messages.DispatchedMessage): boolean
-{
-    let handled: boolean = false;
-
-    try
-    {
-        if (message.type === Messages.DispatchedMessageType.RPC)
-        {
-            let rpc: Messages.IncomingRPC = message as Messages.IncomingRPC;
-
-            switch (rpc.methodID)
-            {
-                // TODO: Add case-statements for your high-volume methods here
-            }
-        }
-    }
-    catch (error)
-    {
-        let messageName: string = (message.type === Messages.DispatchedMessageType.AppEvent) ? `AppEvent:${Messages.AppEventType[(message as Messages.AppEvent).eventType]}` : Messages.DispatchedMessage[message.type];
-        Utils.log(`Error: Failed to process ${messageName} message`);
-        Utils.log(error);
-    }
-
-    return (handled);
-}
-
-/** Asynchronous message dispatcher. */
-async function dispatcherAsync(message: Messages.DispatchedMessage)
+/** 
+ * Synchronous Ambrosia message dispatcher.\
+ * \
+ * **WARNING:** Avoid using any asynchronous features (async/await, promises, callbacks, timers, events, etc.). See "Rules for Message Handling" above. 
+ */
+function dispatcher(message: Messages.DispatchedMessage): void
 {
     const loggingPrefix: string = "Dispatcher";
 
@@ -111,18 +106,22 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                             switch (methodName)
                             {
                                 case "BasicTypes":
-                                    let isFalse: boolean = IC.getPostMethodArg(rpc, "isFalse");
-                                    let height: number = IC.getPostMethodArg(rpc, "height");
-                                    let mystring: string = IC.getPostMethodArg(rpc, "mystring?");
-                                    let mystring2: string = IC.getPostMethodArg(rpc, "mystring2?");
-                                    let my_array: number[] = IC.getPostMethodArg(rpc, "my_array?");
-                                    let notSure: any = IC.getPostMethodArg(rpc, "notSure?");
-                                    IC.postResult<void>(rpc, PTM.Test.BasicTypes(isFalse, height, mystring, mystring2, my_array, notSure));
+                                    {
+                                        let isFalse: boolean = IC.getPostMethodArg(rpc, "isFalse");
+                                        let height: number = IC.getPostMethodArg(rpc, "height");
+                                        let mystring: string = IC.getPostMethodArg(rpc, "mystring?");
+                                        let mystring2: string = IC.getPostMethodArg(rpc, "mystring2?");
+                                        let my_array: number[] = IC.getPostMethodArg(rpc, "my_array?");
+                                        let notSure: any = IC.getPostMethodArg(rpc, "notSure?");
+                                        IC.postResult<void>(rpc, PTM.Test.BasicTypes(isFalse, height, mystring, mystring2, my_array, notSure));
+                                    }
                                     break;
                                 
                                 case "getMedia":
-                                    let mediaName: string = IC.getPostMethodArg(rpc, "mediaName");
-                                    IC.postResult<PTM.Test.PrintMedia>(rpc, PTM.Test.getMedia(mediaName));
+                                    {
+                                        let mediaName: string = IC.getPostMethodArg(rpc, "mediaName");
+                                        IC.postResult<PTM.Test.PrintMedia>(rpc, PTM.Test.getMedia(mediaName));
+                                    }
                                     break;
                                 
                                 case "warnUser":
@@ -130,25 +129,33 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                                     break;
                                 
                                 case "makeName":
-                                    let firstName: string = IC.getPostMethodArg(rpc, "firstName?");
-                                    let lastName: string = IC.getPostMethodArg(rpc, "lastName?");
-                                    IC.postResult<PTM.Test.Names>(rpc, PTM.Test.makeName(firstName, lastName));
+                                    {
+                                        let firstName: string = IC.getPostMethodArg(rpc, "firstName?");
+                                        let lastName: string = IC.getPostMethodArg(rpc, "lastName?");
+                                        IC.postResult<PTM.Test.Names>(rpc, PTM.Test.makeName(firstName, lastName));
+                                    }
                                     break;
                                 
                                 case "return_number":
-                                    let strvalue: string = IC.getPostMethodArg(rpc, "strvalue");
-                                    IC.postResult<number>(rpc, PTM.Test.return_number(strvalue));
+                                    {
+                                        let strvalue: string = IC.getPostMethodArg(rpc, "strvalue");
+                                        IC.postResult<number>(rpc, PTM.Test.return_number(strvalue));
+                                    }
                                     break;
                                 
                                 case "returnstring":
-                                    let numvalue: number = IC.getPostMethodArg(rpc, "numvalue");
-                                    IC.postResult<string>(rpc, PTM.Test.returnstring(numvalue));
+                                    {
+                                        let numvalue: number = IC.getPostMethodArg(rpc, "numvalue");
+                                        IC.postResult<string>(rpc, PTM.Test.returnstring(numvalue));
+                                    }
                                     break;
                                 
                                 case "fnWithMissingType":
-                                    let p1: any = IC.getPostMethodArg(rpc, "p1");
-                                    let p2: number = IC.getPostMethodArg(rpc, "p2");
-                                    IC.postResult<void>(rpc, PTM.Test.fnWithMissingType(p1, p2));
+                                    {
+                                        let p1: any = IC.getPostMethodArg(rpc, "p1");
+                                        let p2: number = IC.getPostMethodArg(rpc, "p2");
+                                        IC.postResult<void>(rpc, PTM.Test.fnWithMissingType(p1, p2));
+                                    }
                                     break;
                                 
                                 default:
@@ -194,23 +201,23 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                         Meta.publishPostMethod("return_number", 1, ["strvalue: string"], "number");
                         Meta.publishPostMethod("returnstring", 1, ["numvalue: number"], "string");
                         Meta.publishPostMethod("fnWithMissingType", 1, ["p1: any", "p2: number"], "void");
-                        // TODO: Add an exported function 'onICStarting(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICStarting(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.ICStarted:
-                        // TODO: Add an exported function 'onICStarted(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICStarted(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.ICStopped:
-                        // TODO: Add an exported function 'onICStopped(exitCode: number): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICStopped(exitCode: number): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.ICReadyForSelfCallRpc:
-                        // TODO: Add an exported function 'onICReadyForSelfCallRpc(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onICReadyForSelfCallRpc(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
     
                     case Messages.AppEventType.RecoveryComplete:
-                        // TODO: Add an exported function 'onRecoveryComplete(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onRecoveryComplete(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.UpgradeStateAndCode:
@@ -220,15 +227,15 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                         break;
 
                     case Messages.AppEventType.IncomingCheckpointStreamSize:
-                        // TODO: Add an exported function 'onIncomingCheckpointStreamSize(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onIncomingCheckpointStreamSize(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
                     
                     case Messages.AppEventType.FirstStart:
-                        // TODO: Add an exported function 'onFirstStart(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onFirstStart(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.BecomingPrimary:
-                        // TODO: Add an exported function 'onBecomingPrimary(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onBecomingPrimary(): void' to ./JS_CodeGen_TestFiles/TS_Types.ts, then (after the next code-gen) a call to it will be generated here
                         break;
                 }
                 break;
