--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Consumer.g.ts.cmp
@@ -4,6 +4,7 @@
 // Note [to publisher]: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
 import Ambrosia = require("ambrosia-node");
 import IC = Ambrosia.IC;
+import Utils = Ambrosia.Utils;
 
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
@@ -51,22 +52,23 @@ export namespace Test
     export enum Letters { A = 0, B = 3, C = 4, D = 9 }
 
     /**
+     * Note: The result (Names) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * Example of a [post] method that uses custom types.
      */
-    export async function makeNameAsync(firstName?: string, lastName?: string): Promise<Names>
+    export function makeName_PostFork(callContextData: any, firstName?: string, lastName?: string): void
     {
-        let postResult: Names = await IC.postAsync(DESTINATION_INSTANCE_NAME, "makeName", 1, null, POST_TIMEOUT_IN_MS, 
+        IC.postFork(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("firstName?", firstName), 
             IC.arg("lastName?", lastName));
-        return (postResult);
     }
 
     /**
+     * Note: The result (Names) produced by this post method is received via the PostResultDispatcher provided to IC.start().
      * Example of a [post] method that uses custom types.
      */
-    export function makeName(resultHandler: IC.PostResultHandler<Names>, firstName?: string, lastName?: string): void
+    export function makeName_PostImpulse(callContextData: any, firstName?: string, lastName?: string): void
     {
-        IC.post(DESTINATION_INSTANCE_NAME, "makeName", 1, resultHandler, POST_TIMEOUT_IN_MS, 
+        IC.postImpulse(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
             IC.arg("firstName?", firstName), 
             IC.arg("lastName?", lastName));
     }
@@ -102,4 +104,36 @@ export namespace Test
     {
         IC.queueImpulse(DESTINATION_INSTANCE_NAME, 123, { p1: p1 });
     }
+}
+
+/** Handler for the results of previously called post methods (in Ambrosia, only 'post' methods return values). See Messages.PostResultDispatcher. */
+export function postResultDispatcher(senderInstanceName: string, methodName: string, methodVersion: number, callID: number, callContextData: any, result: any, errorMsg: string): boolean
+{
+    const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
+    let handled: boolean = true;
+
+    if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
+    {
+        return (false); // Not handled (this post result is from a different instance)
+    }
+
+    if (errorMsg)
+    {
+        Utils.log(`Post method '${methodName}' from ${sender} IC failed (reason: ${errorMsg})`);
+    }
+    else
+    {
+        switch (methodName)
+        {
+            case "makeName":
+                const makeName_Result: Test.Names = result;
+                // TODO: Handle the result, optionally using the callContextData passed in the call
+                Utils.log(`Post method '${methodName}' from ${sender} IC succeeded`);
+                break;
+            default:
+                handled = false;
+                break;
+        }
+    }
+    return (handled);
 }
