--- a/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptijob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/showhelpptijob.cmp
@@ -16,5 +16,8 @@ Options:
   -nds, --noDescendingSize         Disable message descending size.
   -c, --autoContinue               Is continued automatically at start
   -d, --ICDeploymentMode=VALUE     IC deployment mode specification (SecondProc(
-                                     Default)/InProcDeploy/InProcManual)
+                                     Default)/InProcDeploy/InProcManual/
+                                     InProcTimeTravel)
+  -l, --log=VALUE                  If TTD, the service log path.
+  -ch, --checkpoint=VALUE          If TTD, the checkpoint # to load.
   -h, --help                       show this message and exit
