Updated JS Test cmp files to match recent changes

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Consumer.g.ts.cmp
@@ -119,7 +119,7 @@ export function postResultDispatcher(senderInstanceName: string, methodName: str
 
     if (errorMsg)
     {
-        Utils.log(`Post method '${methodName}' from ${sender} IC failed (reason: ${errorMsg})`);
+        Utils.log(`Error: ${errorMsg}`);
     }
     else
     {
