--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_Generated_Consumer.g.ts.cmp
@@ -21,7 +21,10 @@ export function unused_PostImpulse(callContextData: any): void
     IC.postImpulse(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
 }
 
-/** Handler for the results of previously called post methods (in Ambrosia, only 'post' methods return values). See Messages.PostResultDispatcher. */
+/**
+ * Handler for the results of previously called post methods (in Ambrosia, only 'post' methods return values). See Messages.PostResultDispatcher.\
+ * Must return true only if the result (or error) was handled.
+ */
 export function postResultDispatcher(senderInstanceName: string, methodName: string, methodVersion: number, callID: number, callContextData: any, result: any, errorMsg: string): boolean
 {
     const sender: string = IC.isSelf(senderInstanceName) ? "local" : `'${senderInstanceName}'`;
@@ -29,7 +32,7 @@ export function postResultDispatcher(senderInstanceName: string, methodName: str
 
     if (senderInstanceName !== DESTINATION_INSTANCE_NAME)
     {
-        return (false); // Not handled (this post result is from a different instance)
+        return (false); // Not handled (this post result is from a different instance than the one this consumer-side file is for)
     }
 
     if (errorMsg)
