--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Consumer.g.ts.cmp
@@ -122,7 +122,15 @@ export function postResultDispatcher(senderInstanceName: string, methodName: str
 
     if (errorMsg)
     {
-        Utils.log(`Error: ${errorMsg}`);
+        switch (methodName)
+        {
+            case "makeName":
+                Utils.log(`Error: ${errorMsg}`);
+                break;
+            default:
+                handled = false;
+                break;
+        }
     }
     else
     {
